--- a/docs/d4st-docker-guide/extending/configuring_your_own_containers.dita
+++ b/docs/d4st-docker-guide/extending/configuring_your_own_containers.dita
@@ -9,7 +9,7 @@
     <p>Short version: <ol id="ol_kls_1jy_w5">
         <li>If you haven't already, create your own project to manage your custom container
           definitions and docker-compose files.</li>
-        <li>Copy the <filepath>dfst-docker/containers</filepath> directories into your project.</li>
+        <li>Copy the <filepath>d4st-docker/containers</filepath> directories into your project.</li>
         <li>Copy the directories under <filepath>containers/</filepath> for the containers you want
           to extend into your own project's <filepath>containers/</filepath> directory.</li>
         <li>Rename the directories under <filepath>containers/</filepath> appropriately.</li>
@@ -17,8 +17,8 @@
           changes and extensions.</li>
         <li>Edit the <filepath>docker-compose.yml</filepath> files as needed to reflect your
           container details.</li>
-        <li>Edit the <filepath>docker-compose/dfst-build</filepath> and
-            <filepath>docker-compose/dfst-server</filepath>
+        <li>Edit the <filepath>docker-compose/d4st-build</filepath> and
+            <filepath>docker-compose/d4st-server</filepath>
           <filepath>docker-compose.yml</filepath> files to reflect the locations of the
             <filepath>docker-compose.yml</filepath> files for each of your containers.</li>
       </ol></p>
